Alteração na imagem

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
         </header>
-        <img alt="girl-cellphone" src="./girl-cellphone.png">
+        <img src="./assets/girl-cellphone.png" alt="logo-phone">
      </section>
     </div>
 
